Native library search path is changed via MethodHandle at runtime.
Inspired by https://github.com/Akirathan/native-lib-loader